python3.9 (3.9.2-1pexip3) pexip; urgency=medium

  * Build against libssl1.0

 -- Huw Jones <huw@pexip.com>  Wed, 27 Apr 2022 12:44:20 +0100

python3.9 (3.9.2-1pexip2) pexip; urgency=medium

  * Undo maintainer breakage - modify debian/control.in for our changes too
  * Leading zeros in IPv4 addresses are no longer tolerated.
    See https://github.com/python/cpython/issues/80565
        https://github.com/python/cpython/pull/25099
        and the backport to 3.9:
        https://github.com/python/cpython/pull/25815

 -- Huw Jones <huw@pexip.com>  Tue, 26 Apr 2022 14:40:20 +0100

python3.9 (3.9.2-1pexip1) pexip; urgency=medium

  * Prepare Pexip packaging
  * Fix expat test suite (see https://github.com/python/cpython/pull/31469)

 -- Huw Jones <huw@pexip.com>  Mon, 21 Mar 2022 11:03:10 +0000

python3.9 (3.9.2-1) unstable; urgency=medium

  * Python 3.9.2 release. No changes since 3.9.2~rc1-1.
  * Build idlelib/help.html from source, don't ship the pre-generated file.
  * Autopkg tests:
    - Run testsuite{,-dbg} autopkg tests with allow-stderr. Closes: #983305.
    - Run again in testsuite instead of failing-tests: test_ftplib,
      test_httplib test_imaplib test_nntplib test_poplib test_ssl.
    - Run test_distutils and test_site tests again.

 -- Matthias Klose <doko@debian.org>  Sun, 28 Feb 2021 18:03:44 +0100

python3.9 (3.9.2~rc1-1) experimental; urgency=medium

  * Python 3.9.2 release candidate 1. Changes since 3.9.1-4:
    - Fix issue #42967, web cache poisoning vulnerability.
    - Fix issue #42938, explicitly disable bracketed paste in the interactive
      interpreter. Closes: #979154.
  * Fix permissions and group for local directories. Closes: #962422.
  * Build a python3.9-full package.
  * idle-python3.9: Drop dependency on libjs-mathjax, unused in 3.8 and 3.9.
  * python3.9-doc: Fix links to the documentation in /usr/share/doc/python3.9.
  * Refresh patches.

 -- Matthias Klose <doko@debian.org>  Wed, 17 Feb 2021 19:32:50 +0100
