@@ -1,7 +1,11 @@
-# install the apport exception handler if available
+import site
+import sys
+
+site.addsitedir('/opt/pexip/lib/python{}.{}/site-packages'.format(*sys.version_info[:2]))
+
 try:
-    import apport_python_hook
+    from si.apps.pexcrash.pycrash import PyCrash
 except ImportError:
     pass
 else:
-    apport_python_hook.install()
+    PyCrash.install_handler()
